# platform_description

./: CMakeLists.txt  Readme.md  package.xml
config/: mast_controller_effort.yaml
launch/: description.launch.py
urdf/: mast.xacro  platform.xacro  properties.xacro
urdf/meshes/: r2000.stl
worlds/: platform.sdf  test.sdf  test_copy.sdf
